Path error resolved.

--- a/PBSS/positivebehaviour/templates/positivebehaviour/index.html
+++ b/PBSS/positivebehaviour/templates/positivebehaviour/index.html
@@ -59,16 +59,16 @@
                         <a class="page-scroll" href="#services">Services</a>
                     </li>
 					<li>
-                        <a class="page-scroll" href="#new">New</a>
+                        <a class="page-scroll" href="#new">Signin/Signup</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">About</a>
+                        <a class="page-scroll" href="#about">About us</a>
                     </li>
 					<li>
                         <a class="page-scroll" href="#team">Team</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                        <a class="page-scroll" href="#contact">Contact us</a>
                     </li>
                 </ul>
             </div>
@@ -161,8 +161,15 @@
 		<section id="new" class="box-content box-2 box-style">
 			<div class="container">
 				<div class="row">
-					<blockquote>For a successful technology, reality must take precedence over public relations, for Nature cannot be fooled.</blockquote>
-				</div>
+					<blockquote>Block Qoute for information and Sign Up login Button.</blockquote>
+                </div>
+                <div class="container-fluid">
+                    <div class="row">
+                <div class="col text-center">
+                    <a class="btn btn-1 btn-sm" href="#">Signup</a>
+                    <a class="btn btn-1 btn-sm" href="#">Signin</a>
+                </div></div>
+                </div>
 			</div>
 		</section>
 
@@ -171,7 +178,7 @@
 			<div class="container">
 				<div class="row heading">
 					<div class="col-lg-12">
-						<h2>About</h2>
+						<h2>About us</h2>
 						<hr>
 						<div class="intro">Lorem ipsum dolor sit amet</div>
 					</div>
@@ -435,7 +442,7 @@
 			<div class="container">
 				<div class="row heading">
 					<div class="col-lg-12">
-	                    <h2>Contact</h2>
+	                    <h2>Contact us</h2>
 						<hr>
 	                    <div class="intro">Lorem ipsum dolor sit amet</div>
 	                </div>
