--- a/PBSS/positivebehaviour/static/css/style.css
+++ b/PBSS/positivebehaviour/static/css/style.css
@@ -132,7 +132,7 @@ header .intro-text .intro-lead-in {margin-bottom: 30px;font-family: 'Helvetica,A
 .box-content {padding: 100px 0;}
 .box-content .heading{margin-bottom: 30px; text-align: center;}
 .box-content .heading h2{font-size: 45px;letter-spacing:2px;}
-.box-content .heading .intro{margin-bottom: 75px;font-family: 'Shadows Into Light', cursive;font-size:22px;font-style: italic;}
+.box-content .heading .intro{margin-bottom: 75px;font-family: 'Shadows Into Light', cursive;font-size:22px;}
 
 .box-content.box-style {background-attachment:fixed; background-image: url(/static/images/bg-1.jpg); background-color: #222;color:#fff;}
 
