--- a/PBSS/positivebehaviour/static/css/style.css
+++ b/PBSS/positivebehaviour/static/css/style.css
@@ -132,7 +132,7 @@ header .intro-text .intro-lead-in {margin-bottom: 30px;font-family: 'Helvetica,A
 .box-content {padding: 100px 0;}
 .box-content .heading{margin-bottom: 30px; text-align: center;}
 .box-content .heading h2{font-size: 45px;letter-spacing:2px;}
-.box-content .heading .intro{margin-bottom: 75px;font-family: 'Shadows Into Light', cursive;font-size:22px;}
+.box-content .heading .intro{margin-bottom: 75px; font-family: 'Helvetica,Arial', cursive;font-size:22px;}
 
 .box-content.box-style {background-attachment:fixed; background-image: url(/static/images/bg-1.jpg); background-color: #222;color:#fff;}
 
@@ -302,18 +302,18 @@ footer .col-footer.footer-2{}
 footer .col-footer.footer-3{}
 footer .col-footer.footer-3 img{margin: 10px 0;}
   
-footer .copyright {padding: 15px 0;background-color: #F7F7F7;color:#222; text-align:center;}
+footer .copyright {background-color: white;color:#222; text-align:center;}
 footer .copyright p, footer .copyright ul{margin: 20px 0;}
 
 /* ---------------------------------------------------------------------------- */
-/* ------------------------------------Subcribe-------------------------------- */
+/* ------------------------------------Subscribe-------------------------------- */
 /* ---------------------------------------------------------------------------- */
-#subcribe {margin: 10px 0;}
+#subscribe {margin: 10px 0;}
 
-#subcribe input[type="text"] {
-    background:#26232D;
-    font: 15px Arial,Helvetica,Sans-serif;
-    color: #867B6E;
+#subscribe input[type="text"] {
+    background: white;
+    font: 15px Arial,Helvetica;
+    color: black;
     width: 100%;
 	border-radius: 0px;
     padding: 10px;
@@ -348,5 +348,5 @@ a.btn:focus{outline: 0;}
 .btn-3 {background: #6ECADC;margin: 20px 0 10px 0;border: 2px solid transparent;font-size:25px;}
 .btn-3:hover {color:#333;border:2px solid #6ECADC;background:transparent;}
 
-.btn-4 {background: #555;border: 2px solid transparent;font-size:18px;}
-.btn-4:hover {color:#aaa;border:2px solid #555;background:transparent;text-shadow: none;}
+.btn-4 {background: #6ECADC;border: 2px solid transparent;font-size:18px;}
+.btn-4:hover {color:#333;border:2px solid #555;background:transparent;text-shadow: none;}
