--- a/PBSS/positivebehaviour/templates/positivebehaviour/index.html
+++ b/PBSS/positivebehaviour/templates/positivebehaviour/index.html
@@ -56,16 +56,16 @@
                         <a class="page-scroll" href="#page-top">Home</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Services</a>
+                        <a class="page-scroll" href="#about">About us</a>
                     </li>
-					<li>
+                    <li>
                         <a class="page-scroll" href="#new">Signin/Signup</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">About us</a>
+                        <a class="page-scroll" href="#services">Services</a>
                     </li>
 					<li>
-                        <a class="page-scroll" href="#team">Team</a>
+                        <a class="page-scroll" href="#fbaform">FBA Form</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact us</a>
@@ -103,78 +103,7 @@
     </header>
 	<!-- Header -->
 
-	<!-- /////////////////////////////////////////Content -->
-	<div id="page-content" class="index-page">
-
-		<!-- ////////////Content Box 01 -->
-		<section id="services" class="box-content box-1">
-			<div class="container">
-				<div class="row heading">
-					<div class="col-lg-12">
-						<h2>Services</h2>
-						<hr>
-						<div class="intro">Lorem ipsum dolor sit amet</div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-sm-3 box-item">
-						<div class="wrap-img">
-							<img src="{% static 'images/Html.png' %}" alt="">
-						</div>
-						<h3 class="blue">Text Heading 3</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-						Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-						<button type="submit" class="btn btn-2 ">More</button>
-					</div>
-					<div class="col-sm-3 box-item">
-						<div class="wrap-img">
-							<img src="{% static 'images/CSS.png' %}" alt="">
-						</div>
-						<h3 class="yellow">Text Heading 3</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-						Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-						<button type="submit" class="btn btn-2 ">More</button>
-					</div>
-					<div class="col-sm-3 box-item">
-						<div class="wrap-img">
-							<img src="{% static 'images/screen.png' %}" alt="">
-						</div>
-						<h3 class="red">Text Heading 3</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-						Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-						<button type="submit" class="btn btn-2 ">More</button>
-					</div>
-					<div class="col-sm-3 box-item">
-						<div class="wrap-img">
-							<img src="{% static 'images/Setting.png' %}" alt="">
-						</div>
-						<h3 class="green">Text Heading 3</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-						Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-						<button type="submit" class="btn btn-2 ">More</button>
-					</div>
-				</div>
-			</div>
-		</section>
-
-		<!-- ////////////Content Box 02 -->
-		<section id="new" class="box-content box-2 box-style">
-			<div class="container">
-				<div class="row">
-					<blockquote>Block Qoute for information and Sign Up login Button.</blockquote>
-                </div>
-                <div class="container-fluid">
-                    <div class="row">
-                <div class="col text-center">
-                    <a class="btn btn-1 btn-sm" href="#">Signup</a>
-                    <a class="btn btn-1 btn-sm" href="#">Signin</a>
-                </div></div>
-                </div>
-			</div>
-		</section>
-
-		<!-- ////////////Content Box 03 -->
-		<section id="about" class="box-content box-3">
+    <section id="about" class="box-content box-3">
 			<div class="container">
 				<div class="row heading">
 					<div class="col-lg-12">
@@ -255,8 +184,95 @@
 			</div>
 		</section>
 
+
+    <section id="new" class="box-content box-2 box-style">
+			<div class="container">
+				<div class="row">
+					<blockquote>Block Qoute for information and Sign Up login Button.</blockquote>
+                </div>
+                <div class="container-fluid">
+                    <div class="row">
+                <div class="col text-center">
+                    <a class="btn btn-1 btn-sm" href="#">Signup</a>
+                    <a class="btn btn-1 btn-sm" href="#">Signin</a>
+                </div></div>
+                </div>
+			</div>
+		</section>
+
+	<!-- /////////////////////////////////////////Content -->
+	<div id="page-content" class="index-page">
+
+		<!-- ////////////Content Box 01 -->
+		<section id="services" class="box-content box-1">
+			<div class="container">
+				<div class="row heading">
+					<div class="col-lg-12">
+						<h2>Services</h2>
+						<hr>
+						<div class="intro">Lorem ipsum dolor sit amet</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-sm-3 box-item">
+						<div class="wrap-img">
+							<img src="{% static 'images/Html.png' %}" alt="">
+						</div>
+						<h3 class="blue">Text Heading 3</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+						Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+						<button type="submit" class="btn btn-2 ">More</button>
+					</div>
+					<div class="col-sm-3 box-item">
+						<div class="wrap-img">
+							<img src="{% static 'images/CSS.png' %}" alt="">
+						</div>
+						<h3 class="yellow">Text Heading 3</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+						Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+						<button type="submit" class="btn btn-2 ">More</button>
+					</div>
+					<div class="col-sm-3 box-item">
+						<div class="wrap-img">
+							<img src="{% static 'images/screen.png' %}" alt="">
+						</div>
+						<h3 class="red">Text Heading 3</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+						Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+						<button type="submit" class="btn btn-2 ">More</button>
+					</div>
+					<div class="col-sm-3 box-item">
+						<div class="wrap-img">
+							<img src="{% static 'images/Setting.png' %}" alt="">
+						</div>
+						<h3 class="green">Text Heading 3</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+						Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+						<button type="submit" class="btn btn-2 ">More</button>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<!-- ////////////Content Box 02 -->
+
+		<!-- ////////////Content Box 03 -->
+        <section id="fbaform" class="box-content box-1" style="background: white;>
+			<div class="container">
+				<div class="row heading">
+					<div class="col-lg-12">
+						<h2>FBA Form</h2>
+						<hr>
+						<div class="intro">Lorem ipsum dolor sit amet</div>
+					</div>
+                    <button type="submit" class="btn btn-2 ">Access Form</button>
+				</div>
+
+			</div>
+		</section>
+
 		<!-- ////////////Content Box 04 -->
-		<section id="team" class="box-content box-4 box-style">
+		<section class="box-content box-4 box-style">
 			<div class="clearfix">
 				<div class="cd-testimonials-wrapper cd-container">
 					<ul class="cd-testimonials">
@@ -438,7 +454,7 @@
 		</section>
 
 		<!-- ////////////Content Box 05 -->
-		<section class="box-content box-5" id="contact">
+		<section class="box-content box-5" id="contact" style="background:white;" >
 			<div class="container">
 				<div class="row heading">
 					<div class="col-lg-12">
@@ -502,60 +518,55 @@
 	<!-- /////////////////////////////////////////Footer -->
 	<footer>
 		<div class="wrap-footer">
-			<div class="container">
+			<div class="container-fluid">
 				<div class="row">
 					<div class="col-md-4 col-footer footer-1">
-						<div class="heading"><h4>About Us</h4></div>
+						<div class=""><h4>PBSS</h4></div>
 						<div class="content">
 							<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, dolore magna aliquam erat volutpat. </p>
 							<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad</p>
 						</div>
 					</div>
-					<div class="col-md-4 col-footer footer-2">
-						<div class="heading"><h4>Your Email</h4></div>
+
+                    <div class="col-md-4 col-footer footer-3">
+						<div class=""><h4>Links</h4></div>
+                        <div class="row">
+							<div class="col-md-6">
+								<a class="" href="#">Home</a>
+							</div>
+							<div class="col-md-6">
+								<a class="" href="#">About us</a>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-md-6">
+								<a class="" href="#">Signup/signin</a>
+							</div>
+							<div class="col-md-6">
+								<a class="" href="#!">Services</a>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-md-6">
+								<a class="" href="#!">FBA Form</a>
+							</div>
+							<div class="col-md-6">
+								<a class="" href="#!">Contact us</a>
+							</div>
+						</div>
+                    </div>
+
+                    <div class="col-md-4 col-footer footer-2">
+						<div class=""><h4>Your Email</h4></div>
 						<div class="content">
 							<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Consectetuer adipiscing elit, dolore magna aliquam erat volutpat. </p>
-							<div class="subcribe-form" >
-								<form method="get" action="/search" id="subcribe">
+							<div class="subscribe-form" >
+								<form method="get" action="/search" id="subscribe">
 									<div class="form-group">
-										<input type="text" class="form-control input-lg" name="subcribe" placeholder="Enter your email address...  " required="required" />
+										<input type="text" class="form-control input-lg" name="subscribe" placeholder="Enter your email address...  " required="required" />
 									</div>
-									<button type="submit" name="Submit" class="btn btn-4 f-left">Subcribe</button>
+									<button type="submit" name="Submit" class="btn btn-4 btn-block">Subscribe</button>
 								</form>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-4 col-footer footer-3">
-						<div class="row">
-							<div class="col-md-6">
-								<a href="#"><img src="{% static 'images/15.jpg' %}" alt=""/></a>
-							</div>
-							<div class="col-md-6">
-								<a href="#"><img src="{% static 'images/16.jpg' %}" alt=""/></a>
-							</div>
-						</div>
-						<div class="row">
-							<div class="col-md-6">
-								<a href="#"><img src="{% static 'images/17.jpg' %}" alt=""/></a>
-							</div>
-							<div class="col-md-6">
-								<a href="#"><img src="{% static 'images/18.jpg' %}" alt=""/></a>
-							</div>
-						</div>
-						<div class="row">
-							<div class="col-md-6">
-								<a href="#"><img src="{% static 'images/19.jpg' %}" alt=""/></a>
-							</div>
-							<div class="col-md-6">
-								<a href="#"><img src="{% static 'images/20.jpg' %}" alt=""/></a>
-							</div>
-						</div>
-						<div class="row">
-							<div class="col-md-6">
-								<a href="#"><img src="{% static 'images/20.jpg' %}" alt=""/></a>
-							</div>
-							<div class="col-md-6">
-								<a href="#"><img src="{% static 'images/18.jpg' %}" alt=""/></a>
 							</div>
 						</div>
 					</div>
@@ -563,10 +574,10 @@
 			</div>
 		</div>
 		<div class="copyright">
-			<div class="container">
+			<div class="container-fluid">
 				<div class="row">
 					<div class="col-md-4">
-						<p>Copyright &copy; Your Website - Designed by <a href="#"></a></p>
+						<p>Copyright &copy; PBSS - Designed by <a href="#"></a></p>
 					</div>
 					<div class="col-md-4">
 						<ul class="list-inline">
@@ -582,9 +593,11 @@
 					</div>
 					<div class="col-md-4">
 						<ul class="list-inline">
-							<li><a href="#">Privacy Policy</a>
+							•<li><a href="#">Privacy Policy</a>
 							</li>
-							<li><a href="#">Terms of Use</a>
+							•<li><a href="#">Terms of Use</a>
+							</li>
+                            •<li><a href="#">Sitemap</a>
 							</li>
 						</ul>
 					</div>
