--- a/PBSS/users/templates/users/register.html
+++ b/PBSS/users/templates/users/register.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+{% load crispy_forms_tags %}
+
 <head>
     <meta charset="UTF-8">
     <title>Register</title>
 </head>
+
 <body>
 
     <div class="content-section">
@@ -11,7 +14,7 @@
             {% csrf_token %}
             <fieldset class="form-group">
                 <legend class="border-bottom mb-4 "> Join Now </legend>
-                {{ form.as_p }}
+                {{ form| crispy }}
             </fieldset>
 
             <div class="form-group">
