--- a/PBSS/users/templates/users/login.html
+++ b/PBSS/users/templates/users/login.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Register</title>
+    <title>Login</title>
 </head>
 
 <body>
@@ -13,12 +13,12 @@
         <form method="POST">
             {% csrf_token %}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4 "> Join Now </legend>
-                {{ form| crispy }}
+                <legend class="border-bottom mb-4 "> Log In </legend>
+                {{ form|crispy }}
             </fieldset>
 
             <div class="form-group">
-                <button class="btn btn-outline-info" type="submit" > Sign Up </button>
+                <button class="btn btn-outline-info" type="submit" > Login </button>
 
             </div>
 
@@ -27,7 +27,7 @@
 
         <div class="border-top pr-3">
             <small class="text-muted">
-                Already have an account? <a class="ml-2" href="{% url 'login' %}"> Sign In</a>
+                Need an account? <a class="ml-2" href="{% url 'register' %} "> Sign Up Now</a>
 
             </small>
 
