--- a/PBSS/positivebehaviour/templates/positivebehaviour/index.html
+++ b/PBSS/positivebehaviour/templates/positivebehaviour/index.html
@@ -214,8 +214,8 @@
                 <div class="container-fluid">
                     <div class="row">
                 <div class="col text-center">
-                    <a class="btn btn-1 btn-sm" href="#">Signup</a>
-                    <a class="btn btn-1 btn-sm" href="#">Signin</a>
+                    <a class="btn btn-1 btn-sm" href=" {% url 'register' %}">Signup</a>
+                    <a class="btn btn-1 btn-sm" href=" {% url 'login' %}">Signin</a>
                 </div></div>
                 </div>
 			</div>
