--- a/PBSS/users/templates/users/profile.html
+++ b/PBSS/users/templates/users/profile.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+{% load static %}
 {% load crispy_forms_tags %}
 
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/our-team.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/animated-logo.min.css' %}">
 </head>
 
 <body>
