--- a/PBSS/users/templates/users/register.html
+++ b/PBSS/users/templates/users/register.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+{% load static %}
 {% load crispy_forms_tags %}
 
 <head>
     <meta charset="UTF-8">
     <title>Register</title>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/our-team.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/animated-logo.min.css' %}">
+
 </head>
 
 <body>
+
 
     <div class="content-section">
         <form method="POST">
@@ -33,7 +40,6 @@
 
         </div>
     </div>
-
 
 
 
