--- a/PBSS/positivebehaviour/static/css/style.css
+++ b/PBSS/positivebehaviour/static/css/style.css
@@ -400,4 +400,19 @@ a.btn:focus{outline: 0;}
         min-height: 38px;
         border-radius: 2px;
     }
+.profile-form {
+        padding-top: 5%;
+		width: 95%;
+    	margin: 50px auto;
+	}
+.profile-form form {
+        margin-top: 0%;
+    	margin-bottom: 15px;
+        background: #f7f7f7;
+        box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+        padding: 30px;
+    }
+ .profile-form h2 {
+        margin: 0 0 15px;
+    }
 
