--- a/PBSS/users/templates/users/login.html
+++ b/PBSS/users/templates/users/login.html
@@ -1,47 +1,33 @@
-<!DOCTYPE html>
-<html lang="en">
-{% load static %}
-{% load crispy_forms_tags %}
+{%  extends "users/userbase.html" %}
+{% block content %}
+    {% load static %}
+    {% load crispy_forms_tags %}
 
+    <div class="login-form">
+            <div class="row">
+                <div class="col-mt-3">
 
-<head>
-    <meta charset="UTF-8">
-    <title>Login</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/our-team.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/animated-logo.min.css' %}">
-</head>
+        <div class="content-section">
+            <form method="POST">
+                {% csrf_token %}
+                <h3 class="text-center">Sign in</h3><br>
+                <fieldset class="form-group">
+                    <legend class="border-bottom mb-4 "></legend>
+                    {{ form|crispy }}
+                </fieldset>
 
-<body>
+                <div class="form-group">
+                    <button class="btn btn-primary btn-block" type="submit" > Sign in </button>
 
-    <div class="content-section">
-        <form method="POST">
-            {% csrf_token %}
-            <fieldset class="form-group">
-                <legend class="border-bottom mb-4 "> Log In </legend>
-                {{ form|crispy }}
-            </fieldset>
-
-            <div class="form-group">
-                <button class="btn btn-outline-info" type="submit" > Login </button>
-
-            </div>
-
-
-         </form>
-
+                </div></form>
         <div class="border-top pr-3">
-            <small class="text-muted">
-                Need an account? <a class="ml-2" href="{% url 'register' %} "> Sign Up Now</a>
+                <small class="text-muted">
+                    Need an account? <a class="ml-2" href="{% url 'register' %} "> Sign Up Now</a>
+                </small>
 
-            </small>
+            </div></div></div></div></div>
+
 
         </div>
-    </div>
 
-
-
-
-</body>
-</html>
+{% endblock content %}
