--- a/PBSS/users/templates/users/logout.html
+++ b/PBSS/users/templates/users/logout.html
@@ -1,30 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
-{% load static %}
-{% load crispy_forms_tags %}
+{%  extends "users/userbase.html" %}
+{% block content %}
+    {% load static %}
+    {% load crispy_forms_tags %}
 
-<head>
-    <meta charset="UTF-8">
-    <title>Logout</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/our-team.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/animated-logo.min.css' %}">
-</head>
+    {% load static %}
+        <header id="page-top">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="o-container">
+                        </div>
 
-<body>
-
-    <h2>You have been logged out</h2>
-
-        <div class="border-top pr-3">
-            <small class="text-muted">
-                <a href="{% url 'login' %}"> Log In Again</a>
-
-            </small>
-
-        </div>
-
-
-
-</body>
-</html>
+                                 <div class="container-fluid">
+                                         <h2>You have been logged out</h2>
+                                     <div class="border-top pr-3"><br>
+                                          <small class="text-muted">
+                                <a href="{% url 'login' %}"> Log In Again</a>
+                </small>
+                         </div>
+    </div>
+    </div>
+                    </div><br><br><br>
+                <a class="btn btn-1 btn-sm" href="#about">About Us</a>
+                        <a class="btn btn-1 btn-sm" href="#team">Our Team</a>
+                </div>
+        </header>
+{% endblock content %}
