--- a/PBSS/positivebehaviour/templates/positivebehaviour/base.html
+++ b/PBSS/positivebehaviour/templates/positivebehaviour/base.html
@@ -155,7 +155,7 @@
 							</li>
 							•<li><a href="#">Terms of Use</a>
 							</li>
-                            •<li><a href="#">Sitemap</a>
+                            •<li><a href="/positivebehaviour/sitemap/">Sitemap</a>
 							</li>
 						</ul>
 					</div>
