--- a/PBSS/users/templates/users/userbase.html
+++ b/PBSS/users/templates/users/userbase.html
@@ -33,7 +33,7 @@
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header page-scroll">
-                <a class="navbar-brand page-scroll" href="/positivebehaviour/index/">PBSS</a>
+                <a class="navbar-brand page-scroll" href="#page-top">PBSS</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -117,7 +117,7 @@
 							</li>
 							•<li><a href="#">Terms of Use</a>
 							</li>
-                            •<li><a href="/positivebehaviour/sitemap/">Sitemap</a>
+                            •<li><a href="#">Sitemap</a>
 							</li>
 						</ul>
 					</div>
