--- a/PBSS/users/templates/users/profile.html
+++ b/PBSS/users/templates/users/profile.html
@@ -1,7 +1,7 @@
 {%  extends "users/userbase.html" %}
 {% block content %}
-    {% load static %}
-    {% load crispy_forms_tags %}
+{% load static %}
+{% load crispy_forms_tags %}
 
  <!-- i have to add nav bar which will be redirected to this page.-->
     <div class="profile-form">
@@ -9,7 +9,15 @@
                 <div class="col-mt-3">
                 <div class="content-section">
                     <form method="POST">
-                        <p>hi, {{ user.username }}</p>
+                        <div class="content-section">
+                            <div class="media">
+                                <img class="rounded-circle account-img" src="{{ user.profile.image.url }}">
+                                <div  class="media-body">
+                                    <h2 class="account-heading">{{ user.username }}</h2>
+                                    <p class="text-secondary">{{ user.email }}</p>
+                                </div>
+                            </div>
+                    </div>
                      </form>
 
                     </div>
