--- a/PBSS/fbaform/templates/fbaform/fbaform.html
+++ b/PBSS/fbaform/templates/fbaform/fbaform.html
@@ -1,128 +1,50 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>positive behaviour </title>
-    <h1>Behaviour recording form </h1>
-    <h2>Location</h2>
-
-<ul>
-    {% for location_all in all_items %}
-
-                <li>{{ location_all.wakingup }}</li>
+{%  extends "fbaform/fbabase.html" %}
+{% block content %}
+        {% load static %}
 
 
-    {% endfor %}
-</ul>
-    <form action="/addBehaviour/" method="post">{%  csrf_token %}
-    <input type="text" name="wakingup"/>
-    <input type="submit" value="Add">
-    </form>
-
-    <h2>Triggers</h2>
-
-<ul>
-    {% for triggers_all in all_trigger %}
-
-                <li>{{ triggers_all.reason1 }}</li>
-
-    {% endfor %}
-</ul>
-    <form action="/addTrigger/" method="post">{%  csrf_token %}
-    <input type="text" name="reason1"/>
-    <input type="submit" value="Add">
-    </form>
-<h2>Cue</h2>
-
-</head>
-<body>
-<ul>
-    {% for location_all in all_items %}
-
-{#                <li>{{ location_all.wakingup }}</li>#}
-
-
-
-    {% endfor %}
-</ul>
-    <form action="/addBehaviour/" method="post">{%  csrf_token %}
-    <input type="text" name="wakingup"/>
-    <input type="submit" value="Add">
-    </form>
-<h2>Cues for Distress</h2>
-<ul>
-    {% for location_all in all_items %}
-
-{#                <li>{{ location_all.wakingup }}</li>#}
+    <div class="profile-form">
+            <form class="form-inline my-2 my-lg-0" method="POST">
+                {% csrf_token %}
+                <h3 class="text-center">FBA Form</h3><br>
+                <fieldset class="form-group">
+                <div class="row">
+                    <div class="col-sm-4">
+                    <legend class="border-bottom mb-4 "></legend>
+                    <input type="text" class="form-control input-lg" name="item" id="name" placeholder="Enter Behaviour" required="required" />
+                    </div>
+                    <button type="submit" class="btn btn-3 btn-block" name="btnadd" id="btnadd">Add</button>
+        <br>
+                {%  if messages %}
+                {%  for message in messages %}
+                    <div class = "alert alert-warning alert-dismissable" role="alert">
+                        <button class="close" data-dismiss="alert">
+                            <small><sup>x</sup></small>
+                        </button>
+                    </div>
+                {% endfor %}
+                {% endif %}
+            {% if all_items %}
+                 <table class="table table-bothered">
+                {% for things in all_items %}
+                    {% if things.completed %}
+                        <tr class="table-secondary">
+                            <td><a href="{% url 'edit' things.id %}">{{ things.item }}</a></td>
+                          <td><a href="{% url 'delete' things.id %}">Delete</a></td>
+                        </tr>
+                    {% else %}
+                        <tr>
+                            <td><a href="{% url 'edit' things.id %}">{{ things.item }}</a></td>
+                        <td><a href="{% url 'delete' things.id %}">Delete</a></td>
+                        </tr>
+                    {% endif %}
+            {% endfor %}
+                </table>
+            {% endif %}
+                </div>
+                </fieldset></form>
+                </div>
 
 
 
-    {% endfor %}
-</ul>
-    <form action="/addBehaviour/" method="post">{%  csrf_token %}
-    <input type="text" name="wakingup"/>
-    <input type="submit" value="Add">
-    </form>
-<h2>Physical Aggression</h2>
-
-<ul>
-    {% for location_all in all_items %}
-
-{#                <li>{{ location_all.wakingup }}</li>#}
-
-
-
-    {% endfor %}
-</ul>
-    <form action="/addBehaviour/" method="post">{%  csrf_token %}
-    <input type="text" name="wakingup"/>
-    <input type="submit" value="Add">
-    </form>
-<h2>Property Damage</h2>
-
-<ul>
-    {% for location_all in all_items %}
-
-{#                <li>{{ location_all.wakingup }}</li>#}
-
-
-
-    {% endfor %}
-</ul>
-    <form action="/addBehaviour/" method="post">{%  csrf_token %}
-    <input type="text" name="wakingup"/>
-    <input type="submit" value="Add">
-    </form>
-<h2>Verbal Aggression</h2>
-
-<ul>
-    {% for location_all in all_items %}
-
-{#                <li>{{ location_all.wakingup }}</li>#}
-
-
-
-    {% endfor %}
-</ul>
-    <form action="/addBehaviour/" method="post">{%  csrf_token %}
-    <input type="text" name="wakingup"/>
-    <input type="submit" value="Add">
-    </form>
-<h2>Sexulised Behaviour</h2>
-
-<ul>
-    {% for location_all in all_items %}
-
-{#                <li>{{ location_all.wakingup }}</li>#}
-
-
-
-    {% endfor %}
-</ul>
-    <form action="/addBehaviour/" method="post">{%  csrf_token %}
-    <input type="text" name="wakingup"/>
-    <input type="submit" value="Add">
-    </form>
-
-</body>
-</html>
+{% endblock content %}
