--- a/PBSS/positivebehaviour/templates/positivebehaviour/base.html
+++ b/PBSS/positivebehaviour/templates/positivebehaviour/base.html
@@ -33,7 +33,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">PBSS</a>
+                <a class="navbar-brand page-scroll" href="{% url 'index' %}">PBSS</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -43,7 +43,7 @@
                         <a href="#page-top"></a>
                     </li>
 					<li>
-                        <a class="page-scroll" href="#page-top">Home</a>
+                        <a class="page-scroll" href="{% url 'index' %}">Home</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#about">About us</a>
@@ -94,7 +94,7 @@
 			<div class="container-fluid">
 				<div class="row">
 					<div class="col-md-4 col-footer footer-1">
-						<div class=""><h6>PBSS</h6></div>
+                        <div class=""><h6>PBSS</h6></div>
 						<div class="content">
 							<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, dolore magna aliquam erat volutpat. </p>
                         </div>
@@ -104,7 +104,7 @@
 						<div class="col-xs-6 col-md-4 col-footer footer-3">
                             <h6>Quick Links</h6>
                                 <ul class="footer-links">
-                                      <li><a href="#">Home</a></li>
+                                      <li><a href="{% url 'index' %}">Home</a></li>
                                       <li><a href="#">About us</a></li>
                                       <li><a href="#">Signin/Signup</a></li>
                                       <li><a href="#">Services</a></li>
