--- a/PBSS/positivebehaviour/templates/positivebehaviour/index.html
+++ b/PBSS/positivebehaviour/templates/positivebehaviour/index.html
@@ -8,11 +8,11 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="o-container">
-                            <div class="c-slack">
-                              <span class="c-slack__dot c-slack__dot--a"></span>
-                              <span class="c-slack__dot c-slack__dot--b"></span>
-                              <span class="c-slack__dot c-slack__dot--c"></span>
-                              <span class="c-slack__dot c-slack__dot--d"></span>
+                            <div class="c-slack">{# This is the slack video #}
+                              {#  <span class="c-slack__dot c-slack__dot--a"></span>#}
+                              {#  <span class="c-slack__dot c-slack__dot--b"></span>#}
+                               {#   <span class="c-slack__dot c-slack__dot--c"></span> #}
+                              {# <span class="c-slack__dot c-slack__dot--d"></span>#}
                             </div>
                         </div>
                         <div class="intro-text">
