--- a/PBSS/positivebehaviour/templates/positivebehaviour/index.html
+++ b/PBSS/positivebehaviour/templates/positivebehaviour/index.html
@@ -8,12 +8,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="o-container">
-                            <div class="c-slack">
-                              <span class="c-slack__dot c-slack__dot--a"></span>
-                              <span class="c-slack__dot c-slack__dot--b"></span>
-                              <span class="c-slack__dot c-slack__dot--c"></span>
-                              <span class="c-slack__dot c-slack__dot--d"></span>
-                            </div>
+
                         </div>
                         <div class="intro-text">
                             <div class="intro-lead-in">Hero Image</div>
@@ -188,7 +183,7 @@
                             <hr>
                             <div class="intro">Lorem ipsum dolor sit amet</div>
                         </div>
-                        <button type="submit" class="btn btn-2 ">Access Form</button>
+                        <a class="btn btn-2 btn-sm" href="/fbaform/">Access Form</a>
                     </div>
 
                 </div>
