Revert "Merge branch 'alpha' of https://github.com/anninomi/Positivebehaviour into alpha"
This reverts commit e754ea48714812ca7f6b80b650f2c5183b3a2c36, reversing
changes made to 3a647801645eab294a0c6b14c3aecf52cf61cc30.

--- a/PBSS/positivebehaviour/static/css/style.css
+++ b/PBSS/positivebehaviour/static/css/style.css
@@ -109,7 +109,7 @@ hr:after {content: url(../static/images/dots.png);display: inline-block;position
         font-size: 1.5em;
     }
 }
-header{text-align: center;color: #fff;background: url(/static/images/heroimage.jpg) no-repeat scroll center center ;-webkit-background-size: cover;-moz-background-size: cover;background-size: cover;-o-background-size: cover;height: 650px;}
+header{text-align: center;color: #fff;background: url(/static/images/bg.jpg) no-repeat scroll center center ;-webkit-background-size: cover;-moz-background-size: cover;background-size: cover;-o-background-size: cover;height: 650px;}
 header img{display: block; margin: 200px auto  50px auto;}
 header .intro-text .intro-heading {text-transform: uppercase;font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;font-weight: 700;font-size: 50px;}
 header .intro-text .intro-lead-in {margin-bottom: 30px;font-family: 'Helvetica,Arial';font-size: 42px;}
