--- a/PBSS/positivebehaviour/templates/positivebehaviour/index.html
+++ b/PBSS/positivebehaviour/templates/positivebehaviour/index.html
@@ -183,7 +183,7 @@
                             <hr>
                             <div class="intro">Lorem ipsum dolor sit amet</div>
                         </div>
-                        <a class="btn btn-2 btn-sm" href="/fbaform/">Access Form</a>
+                        <button type="submit" class="btn btn-2 ">Access Form</button>
                     </div>
 
                 </div>
