--- a/PBSS/users/templates/users/userbase.html
+++ b/PBSS/users/templates/users/userbase.html
@@ -33,7 +33,7 @@
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header page-scroll">
-                <a class="navbar-brand page-scroll" href="{% url 'index' %}">PBSS</a>
+                <a class="navbar-brand page-scroll" href="#page-top">PBSS</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -56,7 +56,7 @@
 			<div class="container-fluid">
 				<div class="row">
 					<div class="col-md-4 col-footer footer-1">
-                        <div class=""><h6>PBSS</h6></div>
+						<div class=""><h6>PBSS</h6></div>
 						<div class="content">
 							<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, dolore magna aliquam erat volutpat. </p>
                         </div>
@@ -66,7 +66,7 @@
 						<div class="col-xs-6 col-md-4 col-footer footer-3">
                             <h6>Quick Links</h6>
                                 <ul class="footer-links">
-                                      <li><a href="{% url 'index' %}">Home</a></li>
+                                      <li><a href="#">Home</a></li>
                                       <li><a href="#">About us</a></li>
                                       <li><a href="#">Signin/Signup</a></li>
                                       <li><a href="#">Services</a></li>
